<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_story"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_top_story" />
        <item
            android:id="@+id/nav_most_popular"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_most_popular" />
        <item
            android:id="@+id/nav_arts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_arts" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_business" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_technology" />
    </group>

</menu>
