<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_guide_line_half"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <CheckBox
        android:id="@+id/notification_arts_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/arts_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notification_et_user" />

    <CheckBox
        android:id="@+id/notification_politics_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/politics_checkbox"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@id/notification_et_user" />

    <CheckBox
        android:id="@+id/notification_business_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/business_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_arts_checkbox" />

    <CheckBox
        android:id="@+id/notification_sports_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/sports_checkbox"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@+id/notification_politics_checkbox" />

    <CheckBox
        android:id="@+id/notification_entrepreneurs_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/entrepreneurs_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_business_checkbox" />

    <CheckBox
        android:id="@+id/notification_travel_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/travel_checkbox"
        app:layout_constraintStart_toStartOf="@id/search_guide_line_half"
        app:layout_constraintTop_toBottomOf="@+id/notification_sports_checkbox" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/notification_et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_query_term"
        android:layout_margin="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>